# MediaFetchBot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  release_bot.yml
MediaFetchBot/: Cargo.toml
locales/: en.json
media_fetch_bot/: Cargo.toml  Dockerfile
media_fetch_bot/locales/: en.json
media_fetch_bot/src/: bot_commands.rs  bot_config.rs  command.rs  config.rs  error.rs  errors.rs  instagram.rs  lib.rs  link_type.rs  localization.rs  localized_messages.rs  logger.rs  main.rs  rapid_api.rs  tiktok.rs  utils.rs  whitelist.rs
media_fetch_bot/src/errors/: api.rs  env.rs  error_type.rs  user_input.rs  user_input_errors.rs
media_fetch_bot/src/general_errors/: user_input.rs
media_fetch_bot/src/instagram/: content_type.rs  errors.rs  handler.rs  media_format.rs  post.rs  raw_media.rs  story.rs
media_fetch_bot/src/instagram/errors/: api_error.rs  error_type.rs  user_error.rs
media_fetch_bot/src/rapid_api/: media_format.rs  raw_media.rs
media_fetch_bot/src/tiktok/: api_error.rs  error_type.rs  errors.rs  handler.rs  media_format.rs  raw_media.rs  user_error.rs
media_fetch_bot/src/tiktok/errors/: api_error.rs  error_type.rs  user_error.rs
media_fetch_bot/src/utils/: response_processing.rs
src/: api.rs  bot_commands.rs  bot_config.rs  error.rs  instagram.rs  logger.rs  main.rs  media.rs  rapid_api.rs  tiktok.rs  whitelist.rs
src/api/instagram/: core.rs  post.rs  story.rs
src/api/tiktok/: core.rs
src/api/youtube/: core.rs
src/bot/: commands.rs  config.rs
src/errors/: api.rs  env.rs  user_input.rs
src/instagram/: content_type.rs  handler.rs  post.rs  story.rs
src/rapid_api/: instance.rs  media.rs
src/tiktok/: handler.rs
src/utils/: response_processing.rs
