[package]
name = "media_fetch_bot"
version = "1.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
categories = ["multimedia"]
keywords = ["telegram", "media", "bot"]
edition = "2021"
rust-version = "1.84"
readme = "README.md"
license = "MIT"
repository = "https://github.com/xairaven/MediaFetchBot"
homepage = "https://github.com/xairaven/MediaFetchBot"
description = "A Telegram bot written in Rust that downloads videos and photo-slides from TikTok & Instagram. Send a link, get the media file instantly."

[dependencies]
teloxide = { version =  "0.13.0", features = ["macros", "throttle"] }

tokio = { version =  "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
chrono = "0.4.39"
fern = "0.7.1"
log = "0.4.25"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
rust-i18n = "3.1.2"
strum = "0.26.3"
strum_macros = "0.26.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
url = "2.5.4"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"