[package]
name = "media_fetch_bot"
version = "1.0.2"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
categories = ["multimedia"]
keywords = ["telegram", "media", "bot"]
edition = "2024"
rust-version = "1.87"
readme = "README.md"
license = "MIT"
repository = "https://github.com/xairaven/MediaFetchBot"
homepage = "https://github.com/xairaven/MediaFetchBot"
description = "A Telegram bot written in Rust that downloads videos and photo-slides from TikTok & Instagram. Send a link, get the media file instantly."

[dependencies]
teloxide = { version =  "0.15.0", features = ["macros", "throttle"] }

tokio = { version =  "1.45.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
chrono = "0.4.41"
fern = "0.7.1"
log = "0.4.27"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
rust-i18n = "3.1.4"
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"