[package]
name = "media_fetch_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = ["macros", "throttle"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
chrono = "0.4.38"
fern = "0.6.2"
log = "0.4.22"
thiserror = "1.0.61"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
rust-i18n = "3.0.1"
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
url = "2.5.2"